# concrete-fftw

./: Cargo.toml  README.md
.github/workflows/: rust.yml
concrete-fftw/: Cargo.toml  LICENSE.txt  README.md
concrete-fftw-sys/: Cargo.toml  LICENSE.txt  README.md  build.rs  generate_binding.sh
concrete-fftw-sys/fftw-3.3.8/: .gitignore
concrete-fftw-sys/fftw-3.3.8/genfft/: number.ml
concrete-fftw-sys/src/: fftw.rs  lib.rs
concrete-fftw/src/: array.rs  error.rs  lib.rs  plan.rs  types.rs
concrete-fftw/tests/: c2c.rs  c2c_aligned.rs  r2c.rs  r2c_aligned.rs  r2r.rs
fftw/: Cargo.toml
fftw-bin/: Cargo.toml
fftw-bin/src/: main.rs
fftw-sys/: Cargo.toml  build.rs
fftw-sys/src/: bindings.rs  lib.rs
fftw/benches/: benchmark.rs
fftw/src/: array.rs  lib.rs  plan.rs  types.rs
