[package]
name = "concrete-fftw-sys"
version = "0.1.2"
edition = "2018"
authors = ["D. Ligier", "J.B. Orfila", "A. Péré", "S. Tap", "Zama team"]
license = "GPL-2.0-or-later"
description = "Sources of FFTW and unsafe binding"
homepage = "https://crates.io/crates/concrete-fftw-sys"
repository = "https://github.com/zama-ai/concrete-fftw"
readme = "README.md"
keywords = ["fftw", "fft", "fully", "homomorphic", "fhe"]

build = "build.rs"

[build-dependencies]
fs_extra = "~1.2.0"
bindgen = "0.57.0"

[features]
mkl = ["intel-mkl-src"]

[dependencies]
intel-mkl-src = {version = "0.6.0", optional=true}
num-complex = "0.4.0"

[package.metadata.release]
no-dev-version = true
