[package]
name = "concrete-fftw"
version = "0.1.0"
edition = "2018"
authors = ["D. Ligier", "J.B. Orfila", "A. Péré", "S. Tap", "Zama team"]
license-file = "LICENSE.txt"
description = "Safe wrapper around FFTW"
homepage = "https://crates.io/crates/concrete-fftw"
repository = "https://github.com/zama-ai/concrete-fftw"
readme = "README.md"
keywords = ["fftw", "fft", "fully", "homomorphic", "encryption", "fhe", "cryptography"]

[features]
serialize = ["num-complex/serde", "serde"]
mkl = ["concrete-fftw-sys/mkl"]

[dependencies]
concrete-fftw-sys = "=0.1.0"
bitflags = "1.2.1"
lazy_static = "1.4.0"
num-complex = "0.4.0"
num-traits = "0.2.12"
thiserror = "1.0.20"
serde = { version = "1.0", optional = true}

[dev-dependencies]
serde_test = "1.0.125"
