[package]
name = "fftw-sys"
version = "0.3.3"
authors = ["Toshiki Teramura <toshiki.teramura@gmail.com>"]
edition = "2018"

description = "Source of FFTW"
repository = "https://github.com/rust-math/fftw"
keywords = ["fftw"]
license = "GPL-2.0-or-later"

build = "build.rs"

[build-dependencies]
fs_extra = "~1.2.0"
bindgen = "0.57.0"

[dependencies]
f128 = "0.2.9"
num-complex = "0.4.0"

[package.metadata.release]
no-dev-version = true
