[package]
name = "fftw"
version = "0.7.0"
authors = ["Toshiki Teramura <toshiki.teramura@gmail.com>"]
edition = "2018"

description = "safe wrapper of FFTW3"
repository = "https://github.com/rust-math/fftw"
keywords = ["fftw"]
license-file = "../LICENSE.md"

[dependencies]
bitflags = "1.2.1"
lazy_static = "1.4.0"
ndarray = "0.14.0"
num-complex = "0.3.0"
num-traits = "0.2.12"
thiserror = "1.0.20"
f128 = "0.2.9"

[dependencies.fftw-sys]
path = "../fftw-sys"